variables.Variables.scala.error
Erreur de compilation :
Variables:2: error: ';' expected but ',' found.
while(estSurBiscuit == false) {avance(),nbPas = nbPas + 1}
                                       ^